singularity/benchmarks/jobs/error3280055.err
Traceback (most recent call last):
  File "main.py", line 23, in <module>
    from utils.benchmark import benchmark_routine
  File "/v2c/vox2cortex/utils/benchmark.py", line 16, in <module>
    from utils.bmevaluate import ModelEvaluator
  File "/v2c/vox2cortex/utils/bmevaluate.py", line 157
    write_time2csv('Vox2Cortex', t_sec):
                                       ^
SyntaxError: invalid syntax
